@startuml Class Diagram - Invoice Generation Module (US 2.1)
!theme plain
skinparam classAttributeIconSize 0
skinparam classBorderColor #3B5998
skinparam classBackgroundColor #EEF2FF
skinparam classHeaderBackgroundColor #3B5998
skinparam classHeaderFontColor #FFFFFF
skinparam roundcorner 8
skinparam linetype ortho

title US 2.1 — Penerbitan Tagihan Otomatis\nClass Diagram (Laravel MVC)

' ─── ENUMS ──────────────────────────────────────────────────────
enum OrderStatus {
  DRAFT = "draft"
  PENDING_APPROVAL = "pending_approval"
  APPROVED = "approved"
  WAITING_PAYMENT = "waiting_payment"
  PAID = "paid"
  CANCELLED = "cancelled"
  EXPIRED = "expired"
}

enum InvoiceStatus {
  ISSUED = "issued"
  PAID = "paid"
  CANCELLED = "cancelled"
}

' ─── ELOQUENT MODELS ────────────────────────────────────────────
class User <<Model>> {
  +id : int
  +company_id : int
  +name : string
  +email : string
  +role : string
  --
  +company() : BelongsTo<Company>
  +createdOrders() : HasMany<Order>
  +approvedOrders() : HasMany<Order>
  +issuedInvoices() : HasMany<Invoice>
  +driver() : HasOne<Driver>
  +fuelReceipts() : HasMany<FuelReceipt>
  +isAdminPenjualan() : bool
  +isManajerPembeli() : bool
}

class Company <<Model>> {
  +id : int
  +name : string
  +email : string
  +phone : string
  +address : string
  +npwp : string
  --
  +users() : HasMany<User>
  +orders() : HasMany<Order>
}

class Order <<Model>> {
  +id : int
  +order_number : string
  +company_id : int
  +created_by : int
  +approved_by : int|null
  +fuel_type : string
  +volume_liters : float
  +unit_price : float
  +delivery_location : string
  +scheduled_at : Carbon
  +status : OrderStatus
  +rejection_reason : string|null
  +approved_at : Carbon|null
  --
  +company() : BelongsTo<Company>
  +creator() : BelongsTo<User>
  +approver() : BelongsTo<User>
  +invoice() : HasOne<Invoice>
  +delivery() : HasOne<Delivery>
  +isApproved() : bool
  +hasInvoice() : bool
  +subtotal() : float
  +scopeApproved(Builder) : Builder
  +scopeWaitingPayment(Builder) : Builder
}

class Invoice <<Model>> {
  +id : int
  +invoice_number : string
  +order_id : int
  +issued_by : int
  +subtotal : float
  +ppn_rate : float
  +ppn_amount : float
  +total_amount : float
  +status : InvoiceStatus
  +pdf_path : string|null
  +issued_at : Carbon
  +paid_at : Carbon|null
  --
  +order() : BelongsTo<Order>
  +issuer() : BelongsTo<User>
  +virtualAccounts() : HasMany<VirtualAccount>
  +markAsPaid(Carbon) : void
  +generateInvoiceNumber() : string
  +scopeIssued(Builder) : Builder
  +scopePaid(Builder) : Builder
}

class VirtualAccount <<Model>> {
  +id : int
  +invoice_id : int
  +va_number : string
  +bank_code : string
  +amount : float
  +expires_at : Carbon
  +status : string
  --
  +invoice() : BelongsTo<Invoice>
  +paymentCallbacks() : HasMany<PaymentCallback>
  +isExpired() : bool
  +isActive() : bool
}

class PaymentCallback <<Model>> {
  +id : int
  +virtual_account_id : int
  +bank_reference : string
  +amount_received : float
  +received_at : Carbon
  +is_valid : bool
  +error_message : string|null
  --
  +virtualAccount() : BelongsTo<VirtualAccount>
}

' ─── CONTROLLER (HTTP Layer) ────────────────────────────────────
class InvoiceController <<Controller>> {
  +index(Request) : View
  +store(StoreInvoiceRequest, Order) : RedirectResponse
  +show(Invoice) : View
  +download(Invoice) : StreamedResponse
}

' ─── FORM REQUESTS ──────────────────────────────────────────────
class StoreInvoiceRequest <<FormRequest>> {
  +authorize() : bool
  +rules() : array
}

' ─── POLICY ─────────────────────────────────────────────────────
class InvoicePolicy <<Policy>> {
  +viewAny(User) : bool
  +view(User, Invoice) : bool
  +create(User, Order) : bool
  +download(User, Invoice) : bool
}

' ─── SERVICE / ACTION ───────────────────────────────────────────
class GenerateInvoiceAction <<Action>> {
  -PPN_RATE : float = 0.11
  --
  +execute(Order, User) : Invoice
  -calculateAmounts(float, float) : array
  -buildInvoiceNumber() : string
}

class GenerateInvoicePdfAction <<Action>> {
  +execute(Invoice) : string
}

' ─── RELATIONSHIPS ──────────────────────────────────────────────
User "1" --o{ "0..*" Order        : creates (created_by)
User "1" --o{ "0..*" Order        : approves (approved_by)
User "1" --o{ "0..*" Invoice      : issues (issued_by)
Company "1" --o{ "0..*" Order     : has
Company "1" --o{ "0..*" User      : employs

Order "1" --o| "0..1" Invoice     : generates
Invoice "1" --o{ "0..*" VirtualAccount : has
VirtualAccount "1" --o{ "0..*" PaymentCallback : receives

Order --> OrderStatus
Invoice --> InvoiceStatus

InvoiceController ..> InvoicePolicy          : authorizes via
InvoiceController ..> StoreInvoiceRequest    : validates with
InvoiceController ..> GenerateInvoiceAction  : delegates to
InvoiceController ..> GenerateInvoicePdfAction : delegates to
GenerateInvoiceAction ..> Invoice            : creates
GenerateInvoicePdfAction ..> Invoice         : reads

@enduml
